tests/should_fail/terminates/trait_where_supertrait.stderr
error: Illegal recursive trait
  --> trait_where_supertrait.rs:12:1
   |
12 | trait P<T>: Q<T> {}
   | ^^^^^^^^^^^^^^^^
   |
note: `Q` is a supertrait of `P`
  --> trait_where_supertrait.rs:12:13
   |
12 | trait P<T>: Q<T> {}
   |             ^^^^
note: `P` is a bound of `Q::f`
  --> trait_where_supertrait.rs:9:15
   |
 9 |         Self: P<Self>;
   |               ^^^^^^^

error: aborting due to 1 previous error

